@@ -1,5 +1,8 @@
 2018-02-10  John David Anglin  <danglin@gcc.gnu.org>
 
+	* config/pa/pa.c (hppa_profile_hook): Mark SYMBOL_REF for _mcount as
+	function label.
+
 	Backport from mainline
 	2018-02-01  Aldy Hernandez  <aldyh@redhat.com>
 
